# ak-asset-storage

./: .dockerignore  .env  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo_original.toml  Cargo_workspace.toml  Dockerfile  README.md  architecture_plan.md  asset  cliff.toml  docker-compose.yaml  eslint.config.js  example.toml  index.html  justfile  lint-staged.config.js  output.csv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  typed-router.d.ts  vite.config.ts
.github/: copilot-instructions.md  renovate.json
.husky/: install.mjs  pre-commit
.sqlx/: query-04b9330cef5a80dab1b6e110fb80c010fa48ed9263a2114bcc1010950870c16a.json  query-08f5de0664d8f6cbdee9d1fa472769f3f3c9947e8cb35ed463b267d8979bb3ba.json  query-096b48cd30d1a0d222ed4937bf61dfd63079cc0a6fe1766ae3a3f455e42afb52.json  query-09750063cd284f41c49d04284b9c1756ac515baf000dbb2ed27875b8a6bf73f3.json  query-0ed751eb0641a80d9407c8dee8a0d2f1a5afda132fb21c5b1ebd81ba359d6014.json  query-147e763832c4ed1630a77007e3fa09bd50fd67174805dd251ac1f406f262d164.json  query-1c2cc0cb1b4ea3a2876e9532d757ce5ed420d81282e1956691f8fdb4bab85a31.json  query-1e750e6e84918ae7fc98efce77746e096ccc78c501347ddde028897034f7c6db.json  query-243581a29aebecab3e1b428fd4a5013d71f677868d3f9cb9eae402527077c6e0.json  query-2ba669684edebe811e3eeab9d9ef2c21dca96942d63c160023b05a1f6b5b4008.json  query-2bedbc6e314a548d23f6fe6665a5bb69ddafd9fdd34b2a5f7f46372209684658.json  query-2c06fe4790bb48c11aa041547b1bc321f83910c72e4de812ae9d3c6b02da6bab.json  query-326a0189a36d28e45aa0fbf6196d761b166a0d82b7d6006f0afeebbfb1480f9f.json  query-337c75eea824f4b873a83c5b87789189696203213688d31daacc42b8b7468d3c.json  query-340d69e5d54aa78359bf0a68b08b2af29b49edcab787c580e910f1e2c55bcc98.json  query-350ea8cd27080625f13a70ba0430775ab13e5100f8edf360bd1ce2b76933345e.json  query-35873314274a94ef34651df31bec7340f6aaf226dc592532556afe7b73f2361d.json  query-35899f677cee3a93fa54573221ca432e01a5ffb15f26276e330be2a68a0e6b53.json  query-39afd57ca8d649f8425836f4025d5cfdc15887bce6375fea1cc0707b53ec14f2.json  query-3d12f9a29ff7c1a28cdfdc332c082b97bf0aa7702e4c9917809bf424173620fd.json  query-3e2863faeb9ad73d9fb2494309c0a25def48a8338fc16ae52a095535fdd9218a.json  query-3fd6409bd34e858f68e41ef3fc9c9d2cdf57ecad955ee85bc13bc2697cf5020e.json  query-4ec725e6856d3b747521a25812ad5fbc4a9219e4b6769b8c2a7885dd6fc39bde.json  query-5816c9d2fe2bb25755814028bcd05de93cab35cb2b5fc5b571b3e83d63df065c.json  query-5e14b5c88acbf217d5616f984f00e5ae9f52cbd0fbe09bb927020803025dd566.json  query-6f45cac26d04cafed211956106b1dd768493be437d137cf82b2f158ce57acfd1.json  query-709e379c8fec3284a928b5c6bd28114b7bd3f72bbd2badb40f6c5853857ffc88.json  query-71bc5799038e6ef11c0c6b232c60c62d2fe5f037b0ecd59b537ca435ed25f74c.json  query-773013309efa21c73d75100754acbb83541631ad0214449fa7b21f1dc1077bc1.json  query-778ed567fac283fbd89dfd2358cff41357c981ecbac14ebb8bab6a3b63d373db.json  (+44 more)
app/: App.vue  main.ts
crates/ak_asset_storage/: Cargo.toml  build.rs
crates/ak_asset_storage/src/: app.rs  error.rs  lib.rs  main.rs
crates/ak_asset_storage/src/controllers/: bundles.rs  defaults.rs  mod.rs  versions.rs
crates/ak_asset_storage/src/mailers/: notify.rs
crates/ak_asset_storage/src/models/: bundles.rs  files.rs  mod.rs  versions.rs
crates/ak_asset_storage/src/models/_entities/: bundles.rs  files.rs  mod.rs  versions.rs
crates/ak_asset_storage/src/tasks/: seed.rs
crates/ak_asset_storage/src/views/: bundles.rs  mod.rs  versions.rs
crates/ak_asset_storage/src/workers/: check.rs  download.rs  mod.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/dto/: asset_dto.rs  bundle_dto.rs  manifest_dto.rs  mod.rs  version_dto.rs
crates/application/src/entities/: asset_mapping.rs  bundle.rs  file.rs  mod.rs  version.rs
crates/application/src/ports/: config.rs  external_services.rs  mod.rs  repositories.rs  scheduler.rs
crates/application/src/services/: asset_download_service.rs  asset_mapping_import_service.rs  mod.rs  sync_task.rs  version_check_service.rs
crates/application/src/value_objects/: hot_update_list.rs  mod.rs
crates/application/tests/: lib.rs
crates/application/tests/common/: mod.rs
crates/application/tests/common/mocks/: external_service_mocks.rs  mod.rs  repository_mocks.rs  test_data.rs
crates/application/tests/integration/: mod.rs  test_complete_workflow.rs
crates/application/tests/unit/: mod.rs
crates/application/tests/unit/services/: mod.rs  test_asset_download_service.rs  test_asset_mapping_import_service.rs  test_sync_task.rs  test_version_check_service.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  lib.rs  main.rs  utils.rs
crates/cli/src/commands/: import_manifest.rs  mod.rs  seed.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/entities/: bundle.rs  file.rs  version.rs
crates/domain/src/value_objects/: client_version.rs  file_hash.rs  file_path.rs  file_size.rs  hot_update_list.rs  mod.rs  res_version.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: error.rs  lib.rs  tracing.rs
crates/infrastructure/src/config/: docker_config.rs  mod.rs  provider.rs  settings.rs
crates/infrastructure/src/persistence/postgres/: asset_mapping_repository.rs  bundle_repository.rs  connection.rs  file_repository.rs  item_demand_repository.rs  mod.rs  repository.rs  version_repository.rs
crates/infrastructure/src/scheduling/: mod.rs  simple_scheduler.rs  tokio_scheduler.rs
crates/infrastructure/src/watch/: manifest_watcher.rs  mod.rs
crates/infrastructure/tests/: Dockerfile.test  build-test-image.sh  docker_client_test.rs  github_client_test.rs
crates/web/: Cargo.toml
crates/web/src/: error.rs  lib.rs  middleware.rs  routes.rs  server.rs  state.rs  utils.rs
crates/web/src/dto/: mod.rs  request.rs  requests.rs  responses.rs
crates/web/src/handlers/: bundle_handlers.rs  docker_handlers.rs  item_demand_handlers.rs  manifest_handlers.rs  misc_handlers.rs  mod.rs  torappu_handlers.rs  version_handlers.rs
(+157 files in other folders)
