[workspace]
members = [
  "crates/application",
  "crates/infrastructure",
  "crates/web",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.17.0"
description = "arknights asset storage"
homepage = "https://asset-storage.prts.wiki"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

[workspace.dependencies]
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "signal",
  "rt-multi-thread",
  "macros",
  "time",
] }
async-trait = "0.1.89"
tracing = "0.1.43"
chrono = "0.4.42"
clap = { version = "4.5.53", features = [ "derive" ] }
axum = { version = "0.8.7", features = [
  "macros",
  "multipart"
] }
bytes = { version = "1.11.0" }
rust-embed = "8.9.0"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "json"
] }
reqwest = { version = "0.12.24", features = [ "json" ] }
anyhow = "1.0.100"
tower-http = { version = "0.6.7", features = [
  "timeout",
  "trace",
  "cors",
  "compression-full",
  "fs",
  "set-header"
] }
thiserror = "2.0.17"
toml = "0.9.8"
lettre = { version = "0.11.19", features = [ "tokio1-native-tls" ] }
serde_variant = "0.1.3"
object_store = { version = "0.12.4", features = [ "aws" ] }
sha256 = "1.6.0"
utoipa = { version = "5.4.0", features = [
  "debug",
  "axum_extras"
] }
utoipa-axum = { version = "0.2.0", features = [ "debug" ] }
utoipa-scalar = { version = "0.3.0", features = [ "axum" ] }
mime_guess = { version = "2.0.5" }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls",
  "chrono",
  "uuid",
] }
sentry = { version = "0.46.0", features = [
  "tracing",
  "tower",
  "tower-axum-matched-path",
  "tower-http",
] }
tower = "0.5.2"
futures = "0.3.31"
zip = { version = "6.0.0" }
itertools = { version = "0.14.0" }
walkdir = "2.5.0"
bollard = "0.19.4"
octocrab = "0.48.0"
mimalloc = "0.1.48"

[workspace.metadata.release]
publish = false
tag-prefix = ""
shared-version = true
pre-release-commit-message = "chore: Release {{version}}"
# Don't talk to crates.io https://github.com/crate-ci/cargo-release/pull/735
registry = ""
pre-release-hook = [
  "just",
  "pre-release",
  "{{version}}"
]

