[package]
name = "ak-asset-storage"

version.workspace = true

edition.workspace = true

license.workspace = true

description.workspace = true

homepage.workspace = true

[workspace]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.19.1"
description = "arknights asset storage"
homepage = "https://asset-storage.prts.wiki"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

[workspace.dependencies]
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = [
  "signal",
  "rt-multi-thread",
  "macros",
  "time",
  "process",
] }
async-trait = "0.1.89"
tracing = "0.1.44"
chrono = "0.4.42"
clap = { version = "4.5.54", features = [ "derive" ] }
axum = { version = "0.8.8", features = [
  "macros",
  "multipart"
] }
bytes = { version = "1.11.0" }
rust-embed = "8.9.0"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "json"
] }
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "rustls-no-provider",
  "http2",
] }
anyhow = "1.0.100"
tower-http = { version = "0.6.8", features = [
  "timeout",
  "trace",
  "cors",
  "compression-full",
  "fs",
  "set-header"
] }
thiserror = "2.0.17"
toml = "0.9.10"
lettre = { version = "0.11.19", features = [ "tokio1-native-tls" ] }
serde_variant = "0.1.3"
object_store = { version = "0.13.0", features = [ "aws" ] }
sha256 = "1.6.0"
utoipa = { version = "5.4.0", features = [
  "debug",
  "axum_extras"
] }
utoipa-axum = { version = "0.2.0", features = [ "debug" ] }
utoipa-scalar = { version = "0.3.0", features = [ "axum" ] }
mime_guess = { version = "2.0.5" }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls",
  "chrono",
  "uuid",
] }
sentry = { version = "0.46.0", features = [
  "tracing",
  "tower",
  "tower-axum-matched-path",
  "tower-http",
] }
tower = "0.5.2"
futures = "0.3.31"
zip = { version = "7.0.0" }
itertools = { version = "0.14.0" }
walkdir = "2.5.0"
bollard = "0.19.4"
octocrab = "0.49.5"
mimalloc = "0.1.48"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
rust-embed = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
lettre = { workspace = true }
serde_variant = { workspace = true }
object_store = { workspace = true }
sha256 = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
mime_guess = { workspace = true }
sqlx = { workspace = true }
sentry = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
zip = { workspace = true }
itertools = { workspace = true }
walkdir = { workspace = true }
bollard = { workspace = true }
octocrab = { workspace = true }
mimalloc = { workspace = true }
rustls = { version = "0.23.40", default-features = false, features = [
  "std",
  "ring" 
] }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }

[lints]
workspace = true

[workspace.metadata.release]
publish = false
tag-prefix = ""
shared-version = true
pre-release-commit-message = "chore: Release {{version}}"
# Don't talk to crates.io https://github.com/crate-ci/cargo-release/pull/735
registry = ""
pre-release-hook = [
  "just",
  "pre-release",
  "{{version}}"
]
