[package]
name = "ak_asset_storage"

version.workspace = true

edition.workspace = true

publish = false

[dependencies]
migration = { path = "../migration" }
serde = { version = "1.0.215", features = [ "derive" ] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [ "signal" ] }
async-trait = "0.1.83"
tracing = "0.1.41"
chrono = "0.4.38"
validator = { version = "0.19.0" }
sea-orm = { version = "1.1.2", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
clap = "4.5.23"
axum = { version = "0.7.9", features = [ "macros" ] }
rust-embed = "8.5.0"
uuid = { version = "1.11.0", features = [ "v4" ] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "json"
] }
reqwest = { version = "0.12.9", features = [ "json" ] }
zip = "2.2.1"
anyhow = "1.0.94"
tower-http = { version = "0.6.2", features = [
  "timeout",
  "trace",
  "cors",
  "compression-full",
] }
thiserror = "2.0.4"
toml = "0.8.19"
lettre = { version = "0.11.11", features = [ "tokio1-native-tls" ] }
serde_variant = "0.1.3"
object_store = { version = "0.11.1", features = [ "aws" ] }
sha256 = "1.5.0"
utoipa = { version = "5.2.0", features = [
  "debug",
  "axum_extras"
] }
utoipa-axum = { version = "0.1.2", features = [ "debug" ] }
utoipa-scalar = { version = "0.2.0", features = [ "axum" ] }
itertools = "0.13.0"
mime_guess = { version = "2.0.5" }
