[package]
name = "application"

version.workspace = true

edition.workspace = true

license.workspace = true

description = "Application layer for ak-asset-storage"

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = [ "serde" ] }
futures = { workspace = true }
itertools = { workspace = true }
sha256 = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
serde_variant = { workspace = true }
entrait = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
