[package]
name = "ak-asset-storage-application"

version.workspace = true

edition.workspace = true

license.workspace = true

description = "Application layer for ak-asset-storage"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
sha256 = { workspace = true }
thiserror = { workspace = true }
serde_variant = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
zip = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [ "test-util" ] }
