[package]
name = "domain"

version.workspace = true

edition.workspace = true

license.workspace = true

description = "Domain layer for ak-asset-storage"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
