[package]
name = "ak-asset-storage-infrastructure"

version.workspace = true

edition.workspace = true

license.workspace = true

description = "Infrastructure layer for ak-asset-storage"

[lints]
workspace = true

[dependencies]
ak-asset-storage-application = { path = "../application" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sentry = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
object_store = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
walkdir = { workspace = true }
bollard = { workspace = true }
octocrab = { workspace = true }
